# kild

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HANDOVER.md  LICENSE.md  README.md  VISION.md  claude-code-agent-teams-research.md
.claude/: MANIFEST.md
.claude/PRPs/: personas.md
.claude/agents/: kild-brain.md
.claude/commands/: triage.md
.claude/hooks/: brain-bash-guard.sh
.github/: pull_request_template.md
.github/merge-reports/: merge-order-2026-01-20.md
.kild/: config.example.toml
.kild/maintainer/: direction.md
.kiro/agents/: code-reviewer.json  comment-analyzer.json  error-hunter.json  test-analyzer.json  type-analyzer.json
.kiro/devlog/: devlog.md
.kiro/prompts/: code-review.md  implement-issue.md  implement-plan.md  triage-issues.md
.kiro/steering/: ai-instruction.md  architecture.md  progress.md  tech.md
.pi/agents/: brain.md  committer.md  maintainer-implementer.md  maintainer-reviewer.md  maintainer.md  orchestrator.md  planner.md  reviewer.md  worker.md
.shards/: config.toml
app/: README.md  package-lock.json  package.json
app/scripts/: bundle-sidecar.sh
app/src/: app.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs
crates/kild/: Cargo.toml
crates/kild-acp/: Cargo.toml
crates/kild-acp/src/: client_impl.rs  connection.rs  errors.rs  lib.rs  runner.rs  types.rs
crates/kild-core/: Cargo.toml
crates/kild-daemon/: Cargo.toml
crates/kild-git/: Cargo.toml
crates/kild-peek/: Cargo.toml
crates/kild-peek-core/: Cargo.toml
crates/kild-peek/src/: app.rs  commands.rs  main.rs  table.rs
crates/kild-peek/src/commands/: assert.rs  elements.rs
crates/kild-protocol/: Cargo.toml
crates/kild-ui/: Cargo.toml
docs/: PROMPT_PIPING_PLAN.md  fleet-observability.md  manual-smoke-skills-profile.md  pi-extension-plan.md  room-mailbox-notes.md  upstream-worktree-sandbox.md
docs/dx/: logging-and-labels.md
engine/: COMPARISON.md  README.md  biome.jsonc  package.json  tsconfig.json
engine/src/: cli.ts  server.git-review.test.ts  server.ts  worker.fork.test.ts  worker.ts
flue-spike/: .gitignore  AGENTS.md  COMPARISON.md  README.md  flue.config.ts  package-lock.json  package.json  tsconfig.json
infra/searxng/: README.md  docker-compose.yml  settings.yml
pi-extension/: index.ts  package.json
src/cleanup/: handler.rs  mod.rs  operations.rs
src/cli/: app.rs  commands.rs
src/core/: config.rs  errors.rs
src/files/: handler.rs  operations.rs  types.rs
src/git/: handler.rs
src/health/: errors.rs  handler.rs  mod.rs  operations.rs  storage.rs  types.rs
src/process/: mod.rs  operations.rs  types.rs
src/sessions/: handler.rs  operations.rs  types.rs
src/terminal/: errors.rs  handler.rs  types.rs  (+1 more)
(+532 files in other folders)
