[workspace]
resolver = "2"
members = ["crates/kild-core", "crates/kild"]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Rasmus Widing"]

# Central dependency versions — slices pull these with `dep.workspace = true`.
[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }

# Performance + binary size are product goals.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
