[package]
name = "app"
version = "0.0.1"
description = "kild desktop shell"
authors = ["Rasmus Widing"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin name (a Windows
# limitation: https://github.com/rust-lang/cargo/issues/8519).
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# Standalone workspace: this shell is the only Rust in the repo, and it just hosts
# the web cockpit in a native window. All logic lives in the TypeScript engine.
[workspace]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
