[package]
name = "kild-peek"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for kild-peek - native application inspector for AI-assisted development"

[[bin]]
name = "kild-peek"
path = "src/main.rs"

[dependencies]
kild-peek-core.workspace = true
clap.workspace = true
tracing.workspace = true
serde_json.workspace = true
